# src/controllers/ping.controller.ts
@@ -3,7 +3,7 @@ import { Get, Route } from 'tsoa';
 interface PingResponse {
     message: string;
 }
-@Route('ping')
+@Route('api/ping')
 export default class PingController {
     @Get('/')
     public async getMessage(): Promise<PingResponse> {
